--- a/bet-maker/pyproject.toml
+++ b/bet-maker/pyproject.toml
@@ -13,6 +13,7 @@ uvicorn = {extras = ["standard"], version = "^0.23.2"}
 aio-pika = "^9.3.0"
 asyncpg = "^0.28.0"
 aiohttp = "^3.8.6"
+cachetools = "^5.3.2"
 
 
 [build-system]
